@@ -31,6 +31,9 @@
 #' @param collapse Character string, defining if and how the individual elements should be glued together.
 #' @param js Logical, if \code{TRUE} returns JavaScript varaible names for \code{XiMpLe.node} objects.
 #'    Otherwise their actual ID is returned.
+#' @param quoteOperators Logical, if \code{TRUE} operators like \code{">="} or \code{"!="} that
+#'    are valid for JavaScript code can be used without quoting and will be replaced by \code{id}
+#'    automatically.
 #' @param .objects Alternative way of specifying objects, if you already have them as a list.
 #' @return A character string.
 #' @export
@@ -45,8 +48,12 @@
 #' cbox1 <- rk.XML.cbox(label="foo", value="foo1", id.name="CheckboxFoo.ID")
 #' id("The variable name is: ", cbox1, "!")
 
-id <- function(..., quote=FALSE, collapse="", js=TRUE, .objects=list(...)){
+id <- function(..., quote=FALSE, collapse="", js=TRUE, quoteOperators=TRUE, .objects=eval(substitute(alist(...)))){
   ID.content <- sapply(.objects, function(this.part){
+      # get the object, not just a name from eval(substitute(alist(...)))
+      if (inherits(this.part, "name")){
+        this.part <- eval(this.part)
+      } else {}
       # if this is a plot options object, by default only paste the printout slot
       # and discard the rest
       this.part <- stripCont(this.part, get="printout")
@@ -86,6 +93,10 @@ id <- function(..., quote=FALSE, collapse="", js=TRUE, .objects=list(...)){
       } else if(inherits(this.part, "rk.JS.i18n")){
         # strip all semicolons from i18n calls
         node.id <- slot(this.part, "value")
+        return(node.id)
+      } else if(inherits(this.part, "call") & isTRUE(quoteOperators)){
+        # replace JS operators
+        node.id <- do.call("replaceJSOperators", args=list(this.part))
         return(node.id)
       } else {
         if(isTRUE(quote)){
